# cookbook

./: .gitignore  README.md  docker-compose.yml  init-db.sql  pyproject.toml
.run/: Run recipebook.run.xml  Run save-recipe using Poetry.run.xml
database-initialization/: 1-schema.sql  2-data.sql  2-functions.sql  3-data.sql
recipebook/: ingredient.py  model.py  recipe.py
recipebook/service/: db.py  recipe_service.py
script/: get_recipe.py  list_recipes.py  save_recipe.py
scripts/: del-postgres.sh  init-postgres-recipebook.sh  init-postgres-tutorial.sh  init-postgres.sh  save-recipe.sh  wait-for-postgres.sh
tests/: test_recipebook.py
